<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_toggle_login_register"
        android:orderInCategory="100"
        android:title="@string/login"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="101"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item android:id="@+id/search"
        android:orderInCategory="102"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <!--<item android:id="@+id/opensource"-->
        <!--android:orderInCategory="103"-->
        <!--android:title="@string/open_source_info"-->
        <!--app:showAsAction="never" />-->
</menu>